--- a/index.ipynb
+++ b/index.ipynb
@@ -161,6 +161,7 @@
    },
    "outputs": [],
    "source": [
+    "RANGE(0, LEN)\n",
     "city_indices = None\n",
     "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
    ]
