--- a/index.ipynb
+++ b/index.ipynb
@@ -155,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "range(0, len(cities))\n",
+    "lrange(0, len(cities))\n",
     "city_indices = None\n",
     "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
    ]
