--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
-    "for index in # make sure the list is empty"
+    "for index in cities_indices# make sure the list is empty"
    ]
   },
   {
