Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for index in cities_indices:\n",
-    "    # make sure the list is empty"
+    "    names_and_ranks.append# make sure the list is empty"
    ]
   },
   {
