--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,8 @@
    "source": [
     "names_and_ranks = []\n",
     "for index in cities_indices:\n",
-    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")# make sure the list is empty"
+    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
+    "    # make sure the list is empty"
    ]
   },
   {
