--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for city in citie"
+    "for city in cities:\n",
+    "    city_populations"
    ]
   },
   {
