Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,15 +273,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append()"
+    "    city_populations.append(city['Population'])"
    ]
   },
   {
