--- a/index.ipynb
+++ b/index.ipynb
@@ -313,9 +313,9 @@
    },
    "outputs": [],
    "source": [
-    "print(city_populations[0]\n",
-    "city_populations[1] # 2800000\n",
-    "city_populations[-1] # 0"
+    "print(city_populations[0])\n",
+    "print(city_populations[1])\n",
+    "city_populations[-1])"
    ]
   },
   {
