Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for city"
+    "for city in cities:\n",
+    "    city_areas.append"
    ]
   },
   {
